<resources>
    <string name="app_name">Quick notes</string>
    <string name="newButton">NEW</string>
    <string name="saveButton">SAVE</string>
    <string name="openButton">OPEN</string>
    <string name="deleteButton">DELETE</string>
    <string name="noteNames">Names of the notes</string>
    <string name="noteName">Enter name</string>
    <string name="enterNote">Enter note</string>
    <string name="editButton">EDIT</string>
    <string name="noteText">Note text</string>
    <string name="nameText">Name text</string>
</resources>
